# bluerov_detect_track

./: CMakeLists.txt  GUIDE.txt  README.md  README.txt
cascade/: cascade8.xml
config/: bluerov_zed_parameters.yaml  cascade_detection.yaml  uuv_simulator_parameters.yaml
include/: CloudDetection.hpp
include/2d_object_detection/: CascadeDetection.hpp
launch/: cascade_detection.launch  cloud_detection_node.launch  rosbag_record.launch
src/: CascadeDetection.cpp  CloudDetection.cpp  cascade_detection_node.cpp
